Breve introdução + projeto

--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@ window.addEventListener('resize', checkWindowSize);
             <div class="cols">
                 
                 <div class="iconbox">
-                    <div class="icon">
-                        <svg xmlns='http://www.w3.org/2000/svg' width="40" height="40" viewBox='0 0 24 24'><path fill='%23000' d='M9 6h2v14H9zm4 2h2v12h-2zm4-4h2v16h-2zM5 12h2v8H5z'/></svg>
-                    </div>
+                    <img src="proj/betlit.png" alt="Tela do Projeto" width="180px">
                     <h4 class="title">Análise Jogos - Bet</h4>
                     <p class="description"> Projeto feito em Python automatizando análises de jogos de futebol para 
                         apostas esportivas. Realizei o webscrap da página com os dados importantes, tratei e criei 
