:books: docs: Alteração texto e pdf

--- a/index.html
+++ b/index.html
@@ -63,15 +63,16 @@ window.addEventListener('resize', checkWindowSize);
         </center>
 
         <p>
-            Profissional em início de carreira buscando oportunidades como Desenvolvedor Python ou
-            Analista de Dados Júnior. 
+            Profissional buscando oportunidades como Dev Backend, Frontend e/ou
+            Analista de Dados. 
         </p>
 
         <p>
-            Tenho experiência em desenvolvimento web backend e frontend,
-            análise de dados e processos ETL. Hábil no uso de tecnologias como Python (pandas,
-            yfinance), frameworks web (Django, Flask, Streamlit), e desenvolvimento de interfaces
-            responsivas (HTML5, CSS3, React). 
+            Tenho experiência em desenvolvimento Backend, Frontend, 
+            análise de dados e processos ETL. Hábil no uso de tecnologias 
+            como Python (pandas, yfinance), frameworks web (Django, Flask, Streamlit), 
+            e desenvolvimento de interfaces responsivas (HTML5, CSS3, React, Js, Bootstrap), 
+            e 5+ anos em Suporte TI.  
         </p>
 
         <p>
@@ -85,8 +86,8 @@ window.addEventListener('resize', checkWindowSize);
                     <img src="proj/betlit.png" alt="Tela do Projeto" width="180px">
                     <h4 class="title">Análise Jogos - Bet</h4>
                     <p class="description"> Projeto feito em Python automatizando análises de jogos de futebol para 
-                        apostas esportivas. Realizei o webscrap da página com os dados importantes, tratei e criei 
-                        um dataframe funcional e criei filtros para apostas. 
+                        apostas esportivas. Realizei o webscrap da página com os dados importantes, tratei, criei 
+                        um dataframe (ETL) e criei filtros de acordo com cada estratégia. 
                     </p>
                     <a href="https://betlit.streamlit.app/"> [Link para o projeto] </a>
 
