:bug: fix: Safari compatibilidade da animação

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <script>
 function handleScroll() {
+    const scrollY = window.scrollY || document.documentElement.scrollTop;
     const imgDiv = document.querySelector('.img');
     const txtDiv = document.querySelector('.texto-header');
 
