Update: Texto e PDF para download

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <div class="img"></div>
         <div class="texto-header">
             <h1 class="titulo-header">Olá! Sou o Gerson Machado!</h1>
-            <p>Designer e desenvolvedor fullstack, com foco em Python</p>
+            <p>Analista de dados e Dev com foco em Python</p>
         </div>
         <div class="baixar-cv">
             <p>Baixar meu currículo:</p>
@@ -125,16 +125,18 @@ document.addEventListener('DOMContentLoaded', () => {
         </center>
 
         <p>
-            Profissional buscando oportunidades como Dev Backend, Frontend e/ou
-            Analista de Dados. 
+            Considero oportunidades como Dev Backend com foco em python e Analista de Dados. 
         </p>
 
         <p>
-            Tenho experiência em desenvolvimento Backend, Frontend, 
-            análise de dados e processos ETL. Hábil no uso de tecnologias 
-            como Python (pandas, yfinance), frameworks web (Django, Flask, Streamlit), 
-            e desenvolvimento de interfaces responsivas (HTML5, CSS3, React, Js, Bootstrap), 
-            e 5+ anos em Suporte TI.  
+            Competências técnicas: </br>
+            <strong>Linguagens:</strong> Python, SQL </br>
+            <strong>ETL e Manipulação de Dados:</strong> Extração, tratamento e leitura de dados, pandas</br>
+            <strong>Visualização de Dados:</strong> Power BI, criação de dashboards e relatórios, KPIs</br>
+            <strong>Automação e Pipeline de Dados:</strong> Configuração de pipelines, GitHub Actions</br>
+            <strong>Desenvolvimento Web:</strong> HTML5, CSS3, JavaScript, React, Django, Flask, Streamlit</br>
+            <strong>Bancos de Dados:</strong> Relacionais e não relacionais</br>
+            <strong>Outros:</strong> Excel avançado, Git, GitHub (Actions), APIs, estatísticas, Active Directory  </br>
         </p>
 
         <p>
