--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ document.addEventListener('DOMContentLoaded', () => {
                     <svg xmlns='http://www.w3.org/2000/svg' width="100" height="100" viewBox='0 0 16 16'>
                         <path fill-rule="evenodd" d="M0 14h16v2H0v-2zm8.5-8l4-4H11V0h5v5h-2V3.5L9.5 8l-1 1-2-2-5 5L0 10.5 6.5 4 8 5.5l.5.5z" fill="#6e36f4"/>
                     </svg>
-                    <h4 class="title">Extração de Dados de Vendas da Steam - Python</h4>
+                    <h4 class="title">BTC_Cronjob - Python</h4>
                     <p class="description"> 
                         Este projeto rastreia o valor do Bitcoin (BTC) em reais (BRL) periodicamente e 
                         armazena os resultados em um arquivo CSV. A cada sexta, uma consulta é realizada 
