--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@ document.addEventListener('DOMContentLoaded', () => {
 
         <p>
             <strong>Linguagens:</strong> Python, SQL </br>
-            <strong>ETL e Manipulação de Dados:</strong> Extração, tratamento e leitura de dados, pandas</br>
-            <strong>Visualização de Dados:</strong> Power BI, criação de dashboards e relatórios, KPIs</br>
+            <strong>ETL e Manipulação de Dados:</strong> ETL, Pandas, automação de fluxos de trabalho</br>
+            <strong>Visualização de Dados:</strong> Power BI, Relatórios, Definição de KPIs e Análise de tendências</br>
             <strong>Automação e Pipeline de Dados:</strong> Configuração de pipelines, GitHub Actions</br>
             <strong>Desenvolvimento Web:</strong> HTML5, CSS3, JavaScript, React, Django, Flask, Streamlit</br>
             <strong>Bancos de Dados:</strong> Relacionais e não relacionais</br>
-            <strong>Outros:</strong> Excel avançado, Git, GitHub (Actions), APIs, estatísticas, Active Directory  </br>
+            <strong>Outros:</strong> Estatísticas aplicadas, Excel avançado, Power Query, Tabela dinâmica, Controle de versão com Git e GitHub, Integração e consumo de APIs REST  </br>
+            <strong>Idiomas:</strong> Inglês B2 </br>
         </p> </br>
 
         <p>
