--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="shortcut icon" type="imagex/png" href="./ico.svg">
     <title>Dev.Gerson</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYPGEJ6HN8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LYPGEJ6HN8');
+</script>
+
 <script>
 
     // Função para detectar se o dispositivo é iOS
